Fixed navbar bug on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ nav{
 .navbar.compressed {
     padding-top: 0px;
     padding-bottom: 0px;
-    height: 80px;
+    /*height: 80px;*/
 }
 
 .jumbotron {
